[package]
name = "claw-b"
version = "0.1.1"
edition = "2024"
description = "Thin Rust client for Polymarket trading"
license = "MIT"

[dependencies]
# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# EIP-712 signing
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
alloy-signer = "0.6"
alloy-signer-local = "0.6"

# HMAC-SHA256 (L2 auth)
hmac = "0.12"
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
